Bugfix: Do not let long links break the layout.

--- a/Succinct.colloquyStyle/Contents/Resources/sass/base/_html-elements.scss
+++ b/Succinct.colloquyStyle/Contents/Resources/sass/base/_html-elements.scss
@@ -24,6 +24,10 @@ img {
 
 a:link {
   color: $blue-text;
+  /* Don't let long links break the layout */
+  display: inline-block;
+  vertical-align: top;
+  max-width: 60em;
 }
 
 a:visited {
